[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemy_bullet.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player_hurt.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3 )

[node name="enemy_bullet" type="Area2D"]
modulate = Color( 1, 0.941176, 0.360784, 1 )
rotation = 1.5708
scale = Vector2( 1.25, 1.25 )
collision_layer = 8
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 0.8, 0.3 )

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
[connection signal="area_entered" from="." to="." method="_on_enemy_bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
